--- a/src/App.css
+++ b/src/App.css
@@ -36,4 +36,19 @@ h6 {
 p {
   font-size: 1.6rem;
 }
+
+.mainHeadings {
+  text-align: center;
+  padding: 3rem;
+}
+
+.mainHeadings h1 {
+  font-size: 3rem;
+  color: #095fe9;
+  font-weight: bolder;
+}
+
+.mainHeadings h2 {
+  font-size: 4rem;
+}
 /*# sourceMappingURL=App.css.map */
