aos added/ react-animated-css added/ keyframes added for svg

--- a/src/components/Content/content.module.css
+++ b/src/components/Content/content.module.css
@@ -37,6 +37,43 @@
   width: 40rem;
 }
 
+.svgAnimation {
+  -webkit-animation-name: svgAnimation;
+          animation-name: svgAnimation;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
+}
+
+@-webkit-keyframes svgAnimation {
+  0% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes svgAnimation {
+  0% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
 .TechnologyContainer {
   margin-top: 10rem;
   margin-left: 5rem;
