--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -12,4 +12,18 @@
   font-size: 2rem;
   color: white !important;
 }
+
+.navlink::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 0;
+  background-color: #095fe9;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.navlink:hover::after {
+  width: 100%;
+}
 /*# sourceMappingURL=navbar.module.css.map */
