--- a/src/components/Sections/section.module.scss
+++ b/src/components/Sections/section.module.scss
@@ -9,3 +9,16 @@
     @include VerticalnHorizontalCenter;
   }
 }
+
+.TextThenImage {
+  display: none;
+}
+
+@media only screen and (max-width: 768px) {
+  .TextThenImage {
+      display: block;
+  }
+  .ImageThenText {
+      display: none;
+  }
+}
