--- a/src/components/UniversalComponents/MyButton/MyButton.module.css
+++ b/src/components/UniversalComponents/MyButton/MyButton.module.css
@@ -8,4 +8,19 @@
   margin: 1.5rem;
   border-radius: 2rem;
 }
+
+.myButton button:focus {
+  outline: none;
+}
+
+@media only screen and (max-width: 650px) {
+  .myButton button {
+    padding: 1rem 2rem;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin: 1.5rem;
+    border-radius: 1.5rem;
+  }
+}
 /*# sourceMappingURL=MyButton.module.css.map */
