--- a/src/components/Content/content.module.scss
+++ b/src/components/Content/content.module.scss
@@ -2,10 +2,9 @@ $overlay-color: rgba(10, 10, 10, 0.3);
 $text-color: white;
 $blue-color: #095fe9;
 .overlayForContent {
-  background-color: $overlay-color;
   width: 100%;
-  height: 100%;
-  position: absolute;
+  height: auto;
+  position: relative;
 }
 .ContentContainer {
   width: 95%;
@@ -40,7 +39,7 @@ $blue-color: #095fe9;
   animation-fill-mode: both;
   animation-direction: alternate;
   animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out
+  animation-timing-function: ease-in-out;
 }
 
 @keyframes svgAnimation {
@@ -50,7 +49,6 @@ $blue-color: #095fe9;
   100% {
     transform: scale(1);
   }
- 
 }
 
 .TechnologyContainer {
@@ -70,4 +68,119 @@ $blue-color: #095fe9;
   color: $text-color;
   font-size: 7rem;
   margin: 0px 2rem;
+}
+
+// FOR RESPONSIVE DESIGN
+@media only screen and (max-width: 1290px) {
+  .ContentContainer {
+    h1 {
+      font-size: 4rem;
+    }
+    p {
+      font-size: 1.8rem;
+      margin-top: 4rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 1213px) {
+  .ImageContainer {
+    img {
+      height: 30rem;
+      width: 30rem;
+    }
+  }
+  .technology {
+    h1 {
+      font-size: 16px;
+    }
+  }
+}
+@media screen and (max-width: 990px) and (min-width: 770px) {
+  .ContentContainer {
+    h1 {
+      font-size: 2.5rem;
+    }
+    p {
+      font-size: 1.3rem;
+      margin-top: 3rem;
+    }
+  }
+  .ImageContainer {
+    img {
+      height: 25rem;
+      width: 25rem;
+    }
+  }
+  .technology {
+    h1 {
+      font-size: 13px;
+    }
+  }
+  .icons {
+    font-size: 5rem;
+    margin: 0px 1rem;
+  }
+}
+
+@media only screen and (max-width: 770px) {
+  .ContentContainer {
+    margin: auto;
+    h1 {
+      font-size: 2.5rem;
+    }
+    p {
+      font-size: 2rem;
+      margin-top: 3rem;
+    }
+  }
+  .ImageContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+      display: block;
+    }
+  }
+  .technology {
+    h1 {
+      font-size: 15px;
+    }
+  }
+  .icons {
+    font-size: 3rem;
+    margin: 0px 1rem;
+  }
+  .buttonContainer {
+    justify-content: center;
+    margin-top: 0;
+  }
+  .ImageContainer {
+    img {
+      height: 15rem;
+      width: 30rem;
+      padding-right: 4rem;
+    }
+  }
+  .TechnologyContainer {
+    margin-top: 0%;
+    padding: 1rem 0;
+    margin-left: 0%;
+  }
+  .technology {
+    h1 {
+      font-size: 17px;
+      padding: 1rem;
+      margin: auto;
+    }
+  }
+  .ContentContainer {
+    p {
+      margin-top: 0;
+      text-align: justify;
+    }
+  }
+  .IconContainer {
+    justify-content: center;
+  }
 }
