--- a/src/components/Footer/FooterContactUs.module.css
+++ b/src/components/Footer/FooterContactUs.module.css
@@ -18,4 +18,16 @@
   margin-right: 5rem;
   cursor: pointer;
 }
+
+@media screen and (max-width: 990px) {
+  .mainContainer {
+    text-align: center;
+  }
+  .mainContainer h1 {
+    font-size: 3rem;
+  }
+  .mainContainer h3 {
+    font-size: 1.5rem;
+  }
+}
 /*# sourceMappingURL=FooterContactUs.module.css.map */
