--- a/src/components/Footer/FooterContactUs.module.scss
+++ b/src/components/Footer/FooterContactUs.module.scss
@@ -19,3 +19,15 @@
   margin-right: 5rem;
   cursor: pointer;
 }
+
+@media screen and (max-width: 990px){
+  .mainContainer {
+    text-align: center;
+    h1 {
+      font-size: 3rem;
+    }
+    h3 {
+      font-size: 1.5rem;
+    }
+  }
+}
